--- a/paper/tex/scaling_results.tex
+++ b/paper/tex/scaling_results.tex
@@ -30,7 +30,7 @@ To understand the effect of CFLnumber on the scalability of the algorithm we per
 \begin{table}[htbp]
 	\begin{minipage}{.5\linewidth}
 		\begin{center}
-		\begin{tabular}{ccccccc}
+		\begin{tabular}{|c|cccccc|}
 			\hline
 				CFL & 16 & 32 & 64 & 128 & 256 & 512 \\
 				\hline
@@ -44,7 +44,7 @@ To understand the effect of CFLnumber on the scalability of the algorithm we per
 	\end{minipage}%
 	\begin{minipage}{.5\linewidth}
 		\begin{center}
-		\begin{tabular}{ccccccc}
+		\begin{tabular}{|c|cccccc|}
 			\hline
 				CFL & 128 & 256 & 512 & 1024 & 2048 & 4096 \\
 			\hline
@@ -62,7 +62,7 @@ To understand the effect of CFLnumber on the scalability of the algorithm we per
 
 Table \ref{tab:semilagrangian} illustrates the dependence of number of iterations required to build the grid; as the CFL is increased, interface travels a farther distance which necessitates more iterations to generate the grid. Note that the apparent dependence on the number processors is most likely due to round-off errors during the interpolation and/or backtracking step. Figures \ref{fig:semilagrangian_small} and \ref{fig:semilagrangian_large} illustrate the scalability of the algorithm for small and large problems, respectively. To enable meaningful comparisons between different CFL numbers and number of processors, the maximum time has been scaled to the number of iterations required for grid construction as reported in table \ref{tab:semilagrangian}. For both problems excellent scalability is observed for $\text{CFL} = 1$ and $\text{CFL} = 10$. The algorithm even shows good scalability when taken to the extreme, i.e. for $\text{CFL} = 100$.
 
-An increase in the CFL number has two effects on the algorithm. First, a larger fraction of departure points land in domains of remote processors. Moreover, these points are potentially dispersed across a larger number of processors. This means both the number MPI messages and their volume increases for larger CFL numbers. Second, as more points are shipped to remote processors for interpolation, there is a greater chance that interpolation load is unbalanced across processors. This is specially true for regions of space in which streamlines cluster. Both factors contribute to decrease the scalability of the algorithm at larger CFL numbers. To shed more light on this, we have recorded a complete history of communication pattern in the interpolation step. Figures \ref{fig:communication_128} and \ref{fig:communication_4096} illustrates the effect of CFL number on three different metrics for $p= 128$ and $p=4096$ processors in the first and last iterations of the Semi-Lagrangian algorithm. 
+An increase in the CFL number has two effects on the algorithm. First, a larger fraction of departure points land in domains of remote processors. Moreover, these points are potentially dispersed across a larger number of processors. This means both the number MPI messages and their volume increases for larger CFL numbers. Second, as more points are shipped to remote processors for interpolation, there is a greater chance that interpolation load is unbalanced across processors. This is specially true for regions of space in which streamlines cluster. Both factors contribute to decrease the scalability of the algorithm at larger CFL numbers. 
 \begin{figure}[htbp]
 	\begin{center}
 		\subfigure[Semi-Lagrangian, $\text{CFL} = 1$]{\includegraphics[width = 0.3 \textwidth] {figures/SL_Small_1_SemiLagrangian.pdf}}
@@ -91,114 +91,57 @@ An increase in the CFL number has two effects on the algorithm. First, a larger 
 	\label{fig:semilagrangian_large}
 \end{figure}
 
+To better understand the importance of CFL number on the scalability, we have recorded a complete history of communication pattern in the interpolation step. Figure \ref{fig:communication_4096} illustrates the effects of the CFL number on three different metrics, namely number of interpolation points\footnote{Note that this includes both local points and those queried by other processors}, $N_p$, number of sent and received messages, $N_m = S + R$, and the total communication volume, $V_m$ in mega bytes (MB), for $p=4096$ processors. Moreover, these values are reported for the first (top row) and last (bottom row) iterations of the Semi-Lagrangian algorithm. There are several points to make. First, increasing the CFL number greatly increases the load imbalance as evident in the spread of data in figure \ref{fig:communication_4096_pf}. This is because at higher CFL numbers, it is more likely that some processors receive larger portions of backtracked points. Second, increasing the CFL number increases both the communication volume and its spread across processors (c.f. figure \ref{fig:communication_4096_vf}. Interestingly, however, the number of sent and received messages seems to remain unaffected by the CFL number. The bottom row of figure \ref{fig:communication_4096} illustrates better balance both in the computation and communication volume in the last iteration of the Semi-Lagrangian algorithm. This can be explained by noting that as the algorithm converges to the final grid, partitioning of the grid essentially becomes equivalent to partitioning of the backtracked points. Detailed information about the load balancing and communication pattern is listed in table \ref{tab:communication}.
 \begin{figure}[htbp]
 	\begin{center}
-		\subfigure[]{\includegraphics[width = 0.3 \textwidth] {figures/point_first_128.pdf}}
-		\subfigure[]{\includegraphics[width = 0.3 \textwidth] {figures/message_first_128.pdf}}
-		\subfigure[]{\includegraphics[width = 0.3 \textwidth] {figures/volume_first_128.pdf}}
+		\subfigure[]{\includegraphics[width = 0.3 \textwidth] {figures/point_first_4096.pdf}  \label{fig:communication_4096_pf}}
+		\subfigure[]{\includegraphics[width = 0.3 \textwidth] {figures/message_first_4096.pdf}\label{fig:communication_4096_mf}}
+		\subfigure[]{\includegraphics[width = 0.3 \textwidth] {figures/volume_first_4096.pdf} \label{fig:communication_4096_vf}}
 		\\
-		\subfigure[]{\includegraphics[width = 0.3 \textwidth] {figures/point_last_128.pdf}}
-		\subfigure[]{\includegraphics[width = 0.3 \textwidth] {figures/message_last_128.pdf}}
-		\subfigure[]{\includegraphics[width = 0.3 \textwidth] {figures/volume_last_128.pdf}}		
+		\subfigure[]{\includegraphics[width = 0.3 \textwidth] {figures/point_last_4096.pdf}   \label{fig:communication_4096_pl}}
+		\subfigure[]{\includegraphics[width = 0.3 \textwidth] {figures/message_last_4096.pdf} \label{fig:communication_4096_ml}}
+		\subfigure[]{\includegraphics[width = 0.3 \textwidth] {figures/volume_last_4096.pdf}  \label{fig:communication_4096_vl}}		
 	\end{center}
-	\caption{Performance indicators of the first (top row) and last (bottom row) iterations of the Semi-Lagrangian algorithm for the advection test for $p=128$ processors. Increasing the CFL number greatly causes load imbalance in the amount of computation done during interpolation (a) and increases the communication volume (c). However the CFL number does not seem to appreciably affect the number of messages sent by processors (b). During the last Semi-Lagrangian iteration the initial grid, $G_0$ (c.f. algorithm \ref{alg:semi-lagrangian}), is very close to the final grid. As a result load imbalance is considerably improved (d). Curiously, however, communication pattern does not seem to be affected by much between first and last iterations (e-f).}
-	\label{fig:communication_128}
-\end{figure}
-
-\begin{figure}[htbp]
-	\begin{center}
-		\subfigure[]{\includegraphics[width = 0.3 \textwidth] {figures/point_first_4096.pdf}}
-		\subfigure[]{\includegraphics[width = 0.3 \textwidth] {figures/message_first_4096.pdf}}
-		\subfigure[]{\includegraphics[width = 0.3 \textwidth] {figures/volume_first_4096.pdf}}
-		\\
-		\subfigure[]{\includegraphics[width = 0.3 \textwidth] {figures/point_last_4096.pdf}}
-		\subfigure[]{\includegraphics[width = 0.3 \textwidth] {figures/message_last_4096.pdf}}
-		\subfigure[]{\includegraphics[width = 0.3 \textwidth] {figures/volume_last_4096.pdf}}		
-	\end{center}
-	\caption{Performance indicators of the first (top row) and last (bottom row) iterations of the Semi-Lagrangian algorithm for the advection test for $p=4096$ processors. Increasing the CFL number greatly causes load imbalance in the amount of computation done during interpolation (a) and increases the communication volume (c). However the CFL number does not seem to appreciably affect the number of messages sent by processors (b). During the last Semi-Lagrangian iteration the initial grid, $G_0$ (c.f. algorithm \ref{alg:semi-lagrangian}), is very close to the final grid. As a result load imbalance is considerably improved (d). Curiously, however, communication pattern does not seem to be affected by much between first and last iterations (e-f).}
+	\caption{Performance indicators of the first (top row) and last (bottom row) iterations of the Semi-Lagrangian algorithm for the advection on 4096 processors for $\text{CFL} = 1$ (\drawdiamond{black}), $\text{CFL} = 10$ (\drawsquare{red}), and $\text{CFL} = 100$ (\drawcircle{blue}). Increasing the CFL number greatly causes load imbalance in the amount of computation done during interpolation (a) and increases the communication volume (c). However the CFL number does not seem to appreciably affect the number of messages sent by processors (b). During the last Semi-Lagrangian iteration the initial grid, $G_0$ (c.f. algorithm \ref{alg:semi-lagrangian}), is very close to the final grid. As a result load imbalance is considerably improved (d). Curiously, however, communication pattern does not seem to be affected by much between first and last iterations (e-f).}
 	\label{fig:communication_4096}
 \end{figure}
 
-% \subsection{Reinitialization} \label{section::scaling_reinitialization}
+\begin{table}[htbp]
+	\centering
+	\resizebox{\columnwidth}{!}{%
+	\begin{tabular}{|c|c|cccc|cccc|}
+	\hline
+	\multirow{2}{*}{CFL} & \multirow{2}{*}{Metric} & \multicolumn{4}{|c|}{First Iteration} & \multicolumn{4}{|c|}{Last Iteration} \\
+	\cline{3-10}
+											 & 												 & min & max & avg & stddev 					   & min & max & avg & stddev 						\\
+	\hline
+	\multirow{3}{*}{1}   & $N_p$        & 6.67E+04 & 1.59E+05 & 7.57E+04 & 4.86E+03 & 6.69E+04 & 1.55E+05 & 7.57E+04 & 4.73E+03 \\
+										   & $N_m$ 			  & 18 			 & 387 		  & 47.55 	 & 31.72 		& 18 			 & 392 			& 47.55 	 & 31.19 		\\
+										   & $V_m$ (MB)   & 4.01E-01 & 2.93E+00 & 7.25E-01 & 1.95E-01 & 4.13E-01 & 3.91E+00 & 9.68E-01 & 2.62E-01 \\
+										   & $T_\max$ (s) & \multicolumn{4}{|c|}{6.96E-01}						& \multicolumn{4}{|c|}{3.67E-01}						\\
+	\hline
+	\multirow{3}{*}{10}  & $N_p$        & 5.56E+04 & 1.63E+05 & 7.57E+04 & 6.07E+03 & 6.65E+04 & 1.33E+05 & 7.57E+04 & 4.50E+03 \\
+										   & $N_m$ 			  & 17 			 & 387 		  & 46.73 	 & 31.78 		& 19 			 & 393 			& 46.68 	 & 27.93 		\\
+										   & $V_m$ (MB)   & 4.01E-01 & 3.06E+00 & 8.40E-01 & 2.21E-01 & 4.40E-01 & 4.80E+00 & 2.14E+00 & 9.88E-01 \\
+											 & $T_\max$ (s) & \multicolumn{4}{|c|}{7.55E-01}						& \multicolumn{4}{|c|}{3.30E-01}						\\
+	\hline
+	\multirow{3}{*}{100} & $N_p$        & 8.28E+02 & 4.98E+05 & 7.57E+04 & 3.14E+04 & 6.30E+04 & 1.10E+05 & 7.57E+04 & 4.20E+03 \\
+										   & $N_m$ 			  & 11 			 & 373 		  & 41.18 	 & 30.85 		& 16 			 & 357 			& 41.77 	 & 22.66 		\\
+										   & $V_m$ (MB)   & 5.28E-01 & 1.01E+01 & 2.65E+00 & 9.24E-01 & 9.76E-01 & 4.86E+00 & 3.78E+00 & 5.69E-01 \\
+											 & $T_\max$ (s) & \multicolumn{4}{|c|}{9.25E-01}						& \multicolumn{4}{|c|}{3.55E-01}						\\
+	\hline
+	\end{tabular}
+	}
+	\caption{Detailed load balancing and communication information for the advection test problem for $\text{CFL} = 1$, $\text{CFL} = 10$, and $\text{CFL} = 100$. Note how increasing the CFL number causes load imbalance and increases the communication volume while it does not affect the number of sent and received messages during an iteration of Semi-Lagrangian step.}
+	\label{tab:communication}
+\end{table}
 
-% The reinitialization procedure presented in section \ref{section::reinitialization} necessitates the second order derivatives of the level-set function for the second order discretization in space. The finite difference schemes we implemented rely on the description of the neighborhood of each vertex in the adaptive tree environment. This information can either be computed on the fly or stored in a buffer. Fetching the neighbors information is rather time consuming and was observed to improve the overall scalability of the algorithm by increasing the local computation load. However, it slowed down the procedure significantly and therefore we choose to present the buffered version of the implementation. If one was to be limited in memory, constructing the neighborhood information on the fly would be a desirable option and would lead to better scaling, but in our case memory is not a limiting factor.
+\subsection{Reinitialization} \label{section::scaling_reinitialization}
 
-% The scaling results are presented in figure \ref{fig::scaling_reinitialization} and demonstrate satisfying scalability. Taking for reference the timing with $128$ processes, we observe efficiencies of $0.877$ with $1024$ processes, $0.763$ with $2048$ processes and $0.609$ with $4096$ processes.
-
-% \begin{figure}[ht!]
-% \begin{center}
-% \includegraphics[width=.7\textwidth]{figures/scaling_reinitialization_1st_time_2nd_space_with_buffer.pdf}
-% \caption{Scalability of the reinitialization procedure presented in section \ref{section::reinitialization} and analyzed in section \ref{section::scaling_reinitialization}.} \label{fig::scaling_reinitialization}
-% \end{center}
-% \end{figure}
-
-% \subsection{Poisson solver}
-% p = 128, folder =  host/large/100, mode = _first_ (min, max, avg, std) 
-% point  : 1.56e+06, 2.82e+06, 2.07e+06, 1.65e+05
-% message: 19, 131, 41.78, 19.73
-% volume : 5.81e+00, 3.45e+01, 1.97e+01, 6.46e+00
-
-
-% p = 128, folder =  host/large/10, mode = _first_ (min, max, avg, std) 
-% point  : 1.98e+06, 2.21e+06, 2.07e+06, 3.52e+04
-% message: 22, 131, 42.92, 19.56
-% volume : 2.58e+00, 9.64e+00, 4.92e+00, 1.24e+00
-
-
-% p = 128, folder =  host/large/1, mode = _first_ (min, max, avg, std) 
-% point  : 2.02e+06, 2.20e+06, 2.07e+06, 2.97e+04
-% message: 22, 131, 42.97, 19.53
-% volume : 2.45e+00, 9.03e+00, 4.21e+00, 1.17e+00
-
-
-% p = 4096, folder =  host/large/100, mode = _first_ (min, max, avg, std) 
-% point  : 8.28e+02, 4.98e+05, 7.57e+04, 3.14e+04
-% message: 11, 373, 41.18, 30.85
-% volume : 5.28e-01, 1.01e+01, 2.65e+00, 9.24e-01
-
-
-% p = 4096, folder =  host/large/10, mode = _first_ (min, max, avg, std) 
-% point  : 5.56e+04, 1.63e+05, 7.57e+04, 6.07e+03
-% message: 17, 387, 46.73, 31.78
-% volume : 4.01e-01, 3.06e+00, 8.40e-01, 2.21e-01
-
-
-% p = 4096, folder =  host/large/1, mode = _first_ (min, max, avg, std) 
-% point  : 6.67e+04, 1.59e+05, 7.57e+04, 4.86e+03
-% message: 18, 387, 47.55, 31.72
-% volume : 4.01e-01, 2.93e+00, 7.25e-01, 1.95e-01
-
-% p = 128, folder =  host/large/100, mode = _last_ (min, max, avg, std) 
-% point  : 1.96e+06, 2.17e+06, 2.06e+06, 3.37e+04
-% message: 22, 133, 41.86, 18.62
-% volume : 1.04e+01, 6.63e+01, 2.98e+01, 1.16e+01
-
-
-% p = 128, folder =  host/large/10, mode = _last_ (min, max, avg, std) 
-% point  : 2.02e+06, 2.16e+06, 2.07e+06, 2.76e+04
-% message: 22, 131, 42.88, 19.53
-% volume : 3.22e+00, 1.26e+01, 6.24e+00, 1.43e+00
-
-
-% p = 128, folder =  host/large/1, mode = _last_ (min, max, avg, std) 
-% point  : 2.02e+06, 2.19e+06, 2.07e+06, 2.93e+04
-% message: 22, 131, 42.89, 19.54
-% volume : 2.72e+00, 9.54e+00, 4.46e+00, 1.12e+00
-
-
-% p = 4096, folder =  host/large/100, mode = _last_ (min, max, avg, std) 
-% point  : 6.30e+04, 1.10e+05, 7.57e+04, 4.20e+03
-% message: 16, 357, 41.77, 22.66
-% volume : 9.76e-01, 4.86e+00, 3.78e+00, 5.69e-01
-
-
-% p = 4096, folder =  host/large/10, mode = _last_ (min, max, avg, std) 
-% point  : 6.65e+04, 1.33e+05, 7.57e+04, 4.50e+03
-% message: 19, 393, 46.68, 27.93
-% volume : 4.40e-01, 4.80e+00, 2.14e+00, 9.88e-01
-
-
-% p = 4096, folder =  host/large/1, mode = _last_ (min, max, avg, std) 
-% point  : 6.69e+04, 1.55e+05, 7.57e+04, 4.73e+03
-% message: 18, 392, 47.55, 31.19
-% volume : 4.13e-01, 3.91e+00, 9.68e-01, 2.62e-01
+Finally we present scaling results of our parallel reinitialization algorithm where we extensively make use of algorithm \ref{alg:overlap} for overlapping computation with communication when computing spatial derivatives. Our test is consisted of computing the signed distance to a collection of 100 sphere, whose radii and centers have been selected randomly (c.f. \ref{fig:reinit}). Computation is conducted on a forest with a $3\times3\times3$ macromesh and level-10 octree per macro-cell which results in a final grid with roughly $350$M nodes.
+\begin{figure}
+\centering
+\includegraphics[width=0.5\textwidth]{figures/reinit.png}
+\label{fig:reinit}
+\caption{Computational domain for the reinitialization test}
+\end{figure}
