Finished the scaling results. Now we need to add in Stefan application

--- a/paper/tex/draft.tex
+++ b/paper/tex/draft.tex
@@ -82,7 +82,7 @@
 \input{levelset_method}
 \input{parallel_algorithms}
 \input{scaling_results}
-% \input{applications}
+\input{applications}
 % \input{conclusion}
 
 \bibliographystyle{plain}
