--- a/paper/tex/parallel_algorithms.tex
+++ b/paper/tex/parallel_algorithms.tex
@@ -28,7 +28,7 @@ Aside from grid manipulation and partitioning, we use two additional features of
 Finally, in \texttt{p4est} trees are linearized, i.e. only the leaves are explicitly stored. However, all of algorithms considered here require explicit knowledge of the entire tree. As a result we introduce a simple algorithm, called \texttt{Reconstruct}, which recreates a local representation of the entire ``forest'' that is only adapted to local cells and, potentially, the ghost layer. This approach is similar to the ideas introduced in \cite{Bangerth;Burstedde;Heister;etal:11:Algorithms-and-data-} and our tests show that in a typical application they usually amount to less that $1\%$ of the entire runtime. Algorithm \ref{alg:reconstruction} illustrates how this reconstruction is performed. Given a forest and a layer of ghost cells from \texttt{p4est}, the algorithm generates a local representation of forest by recursively refining from the root until reaching the same level and location of all leaves in \texttt{p4est} and \texttt{ghost}. Note that algorithm \ref{alg:reconstruction} does not involve any communication and is load balanced. Figure \ref{fig:reconstruction} illustrates an application of algorithm \ref{alg:reconstruction}. Note how each processor has independently generated a local representation of the forest that is refined to match the same leaves as in the global forest and ghost layer.
 % , and has an average runtime complexity of $\mathcal{O}\left((n_l + n_g)\log_{2^d}N\right)$ for well-balanced trees in $d$ dimensions. Here, $n_l$ and $n_g$ are the number of local and ghost cells, respectively, and $N$ is the global number of cells.
 \begin{algorithm}[htbp]
-\caption{$H \gets \texttt{Reconstruct (}G\texttt{)}$}\label{euclid}
+\caption{$H \gets \texttt{Reconstruct (}G\texttt{)}$} %\label{euclid}
 \begin{algorithmic}[1]
 \State $H \gets G.\texttt{macromesh()}$
 \For {$tr : G.\texttt{local\_trees()}$} \Comment{traverse local cells}
@@ -119,7 +119,7 @@ S_i = \sum_j a_{ij} \hspace{5 mm} \text {and} \hspace{5 mm} R_i = \sum_j a_{ji}
 \een
 where $S_i$ and $R_i$ denote the number of sent and received messages respectively. While $S_i$ can be computed trivially, a reduction operation is required for computing $R_i$. For instance, this can be achieved using a single \texttt{MPI\_Reduce\_scatter} function call. The last phase of interpolation involves overlapping the computation of interpolated values for local points with the communication of data between processors. This is done by alternating between local calculations and probing for incoming messages from other processors. Interpolation is finished once values for all local points have been calculated and all remote requests have been processed (see algorithm \ref{alg:interpolation}).
 \begin{algorithm}[htbp]
-\caption{$values \gets \texttt{Interpolate (}H, \mathbf{X}\texttt{)}$}\label{euclid}
+\caption{$values \gets \texttt{Interpolate (}H, \mathbf{X}\texttt{)}$} %\label{euclid}
 \begin{algorithmic}[1]
 \State $col \gets 0, buff \gets null$ \Comment{Phase I -- buffering}
 \For {$\mathbf{p} : \mathbf{X}$} 
@@ -169,7 +169,7 @@ where $S_i$ and $R_i$ denote the number of sent and received messages respective
 
 Using the interpolation algorithm \ref{alg:interpolation}, we close this section by presenting the final Semi-Lagrangian algorithm \ref{alg:semi-lagrangian}. The basic idea here is to start from an initial guess $G^{n+1}_0$ and modify the grid using refinement and coarsening criteria in \eqref{eq:refine} and \eqref{eq:coarsen} until convergence is obtained. Various options are available for $G^{n+1}_0$. For instance it is possible to start from the macromesh and only perform refinement steps until convergence. This choice, however, is not suitable since first few iterations do not contain many cells and there is little work for parallelism. Here we simply take the previous grid as the starting point, i.e. $G^{n+1}_0 = G^n$. Note that this iterative process is essentially unavoidable since the grid is based on the value of the level-set function at $t^{n+1}$, which itself is unknown and is to be defined on $G^{n+1}$. Nonetheless the process converges to the final grid in at most $l_{\max}$ steps where $l_{\max}$ denotes the maximum final depth of trees across all processors.
 \begin{algorithm}[htbp]
-\caption{$[G^{n+1}, \phi^{n+1}] \gets \texttt{SemiLagrangian (}G^n, \phi^n, \mathbf{V}^n, \mathbf{V}^{n-1}, \text{CFL}\texttt{)}$}\label{euclid}
+\caption{$[G^{n+1}, \phi^{n+1}] \gets \texttt{SemiLagrangian (}G^n, \phi^n, \mathbf{V}^n, \mathbf{V}^{n-1}, \text{CFL}\texttt{)}$} %\label{euclid}
 \begin{algorithmic}[1]
 \State $\Delta t_l \gets \text{CFL} \times \max \{\mathbf{V}^n\} / G^n.\texttt{hmin()}$
 \State $\Delta t   \gets \texttt{MPI\_Allreduce(}\Delta t_l,\texttt{MPI\_MIN)}$
@@ -213,7 +213,7 @@ where $D^+_i \phi$ and $D^-_i \phi$ are the forward and backward derivatives in 
 where $a^+ = \max(a, 0)$ and $a^- = \min(a, 0)$. Similar to \cite{Min;Gibou:07:A-second-order-accur}, equation \eqref{eq:semidiscrete_reinit} is integrated in time using the TVD-RK2 scheme using adaptive time-stepping to accelerate convergence to steady state. Since all computation is grid based, parallel implementation of this scheme is mostly trivial. However, one minor point requires further explanation. As suggested in \cite{Min;Gibou:07:A-second-order-accur}, one-sided derivatives $D^+_i \phi$ and $D^-_i \phi$ are computed using second order discretizations which require computation of second derivatives. To enable overlap between computation and communications when computing second derivatives and also integrating \eqref{eq:semidiscrete_reinit}, we use the following common technique. First, we label all local points, $L_p$, as either private, $P_p$, or boundary, $B_p$. Here, boundary points are the collection of all local points that are regarded as ghost point, $G_r$, on all other processors, i.e. $B_p = \underset{r,\;r\neq p}{\bigcup} G_r$. Private points are fined as the collection of all local points that are not a boundary point, i.e. $P_p = L_p \setminus B_p$. Algorithm \ref{alg:overlap} illustrates how this labeling can help with computation/computation overlap of an arbitrary local operation $\phi^{n+1} \gets \mathcal{F}(\phi^n)$. Note that \texttt{p4est} library already includes all the primitives required for labeling local points without any further communication.
 
 \begin{algorithm}[htbp]
-\caption{$\phi^{n+1} \gets \texttt{Overlap (}\phi^n, \mathcal{F}\texttt{)}$}\label{euclid}
+\caption{$\phi^{n+1} \gets \texttt{Overlap (}\phi^n, \mathcal{F}\texttt{)}$} %\label{euclid}
 \begin{algorithmic}[1]
 \For {$i:B_p$} \Comment{I -- perform computation on boundary points}
 	\State $\phi^{n+1}_i \gets \mathcal{F}(\phi_i^n)$
